# ai-uc-rag-evaluation-runtime

./: .gitignore  Dockerfile  README.md  changes.patch  compose.yml  pyproject.toml  sonar-project.properties
.github/: copilot-instructions.md
.github/workflows/: check-pull-request.yml  publish-hotfix.yml  publish.yml  scan.yml
app/: config.py
app/common/: http_client.py  log_utils.py  metrics.py  mongo.py  tls.py  tracing.py
app/entrypoints/: fastapi.py
app/example/: router.py
app/health/: router.py
docs/ai/: ai-guidelines-python.md  project-context.md
scripts/: check-unpinned-dependencies.sh
tests/common/: test_http_client.py  test_log_utils.py  test_metrics.py  test_mongo.py  test_tls.py
tests/entrypoints/: test_fastapi.py
